--- a/HW3/HW3.uvprojx
+++ b/HW3/HW3.uvprojx
@@ -428,9 +428,9 @@
               <FilePath>..\drivers\c\adc.c</FilePath>
             </File>
             <File>
-              <FileName>i2c.c</FileName>
+              <FileName>spi.c</FileName>
               <FileType>1</FileType>
-              <FilePath>..\drivers\c\i2c.c</FilePath>
+              <FilePath>..\drivers\c\spi.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -448,9 +448,9 @@
               <FilePath>..\peripherals\c\ps2.c</FilePath>
             </File>
             <File>
-              <FileName>MCP23017.c</FileName>
+              <FileName>accel.c</FileName>
               <FileType>1</FileType>
-              <FilePath>..\peripherals\c\MCP23017.c</FilePath>
+              <FilePath>.\accel.c</FilePath>
             </File>
           </Files>
         </Group>
