--- a/HW3/HW3.uvprojx
+++ b/HW3/HW3.uvprojx
@@ -432,6 +432,11 @@
               <FileType>1</FileType>
               <FilePath>..\drivers\c\spi.c</FilePath>
             </File>
+            <File>
+              <FileName>i2c.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\drivers\c\i2c.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -456,6 +461,11 @@
               <FileName>spi_select.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\peripherals\c\spi_select.c</FilePath>
+            </File>
+            <File>
+              <FileName>MCP23017.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\MCP23017.c</FilePath>
             </File>
           </Files>
         </Group>
