--- a/HW3/HW3.uvprojx
+++ b/HW3/HW3.uvprojx
@@ -467,6 +467,11 @@
               <FileType>1</FileType>
               <FilePath>.\MCP23017.c</FilePath>
             </File>
+            <File>
+              <FileName>eeprom.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\peripherals\c\eeprom.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
