--- a/HW3/HW3.uvprojx
+++ b/HW3/HW3.uvprojx
@@ -463,14 +463,14 @@
               <FilePath>..\peripherals\c\spi_select.c</FilePath>
             </File>
             <File>
-              <FileName>MCP23017.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>.\MCP23017.c</FilePath>
-            </File>
-            <File>
               <FileName>eeprom.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\peripherals\c\eeprom.c</FilePath>
+            </File>
+            <File>
+              <FileName>MCP23017.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\peripherals\c\MCP23017.c</FilePath>
             </File>
           </Files>
         </Group>
