--- a/HW3/HW3.uvprojx
+++ b/HW3/HW3.uvprojx
@@ -437,6 +437,16 @@
               <FileType>1</FileType>
               <FilePath>..\drivers\c\i2c.c</FilePath>
             </File>
+            <File>
+              <FileName>pc_buffer.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\drivers\c\pc_buffer.c</FilePath>
+            </File>
+            <File>
+              <FileName>uart.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\drivers\c\uart.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -471,6 +481,36 @@
               <FileName>MCP23017.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\peripherals\c\MCP23017.c</FilePath>
+            </File>
+            <File>
+              <FileName>serial_debug.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\peripherals\c\serial_debug.c</FilePath>
+            </File>
+            <File>
+              <FileName>ece353_images.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\peripherals\c\ece353_images.c</FilePath>
+            </File>
+            <File>
+              <FileName>ft6x06.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\peripherals\c\ft6x06.c</FilePath>
+            </File>
+            <File>
+              <FileName>launchpad_io.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\peripherals\c\launchpad_io.c</FilePath>
+            </File>
+            <File>
+              <FileName>lcd_images.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\peripherals\c\lcd_images.c</FilePath>
+            </File>
+            <File>
+              <FileName>ws2812b_ice.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\peripherals\c\ws2812b_ice.c</FilePath>
             </File>
           </Files>
         </Group>
